--- a/CapaAccesoDatos/CapaAccesoDatos.csproj
+++ b/CapaAccesoDatos/CapaAccesoDatos.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Conexion.cs" />
     <Compile Include="DatCliente.cs" />
     <Compile Include="DatEmpleado.cs" />
+    <Compile Include="DatInsumos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
