--- a/CapaLogica/CapaLogica.csproj
+++ b/CapaLogica/CapaLogica.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="LogCliente.cs" />
     <Compile Include="LogEmpleado.cs" />
+    <Compile Include="LogInsumos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
