--- a/CapaAccesoDatos/CapaAccesoDatos.csproj
+++ b/CapaAccesoDatos/CapaAccesoDatos.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DatCliente.cs" />
     <Compile Include="DatEmpleado.cs" />
     <Compile Include="DatInsumos.cs" />
+    <Compile Include="DatModelo.cs" />
     <Compile Include="DatMPrima.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
