--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -44,6 +44,7 @@
     <Compile Include="EntInsumos.cs" />
     <Compile Include="EntCliente.cs" />
     <Compile Include="Cache\EntEmpleado.cs" />
+    <Compile Include="EntModelo.cs" />
     <Compile Include="EntMPrima.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
