--- a/FormularioCarpinteria/CapaPresentacion.csproj
+++ b/FormularioCarpinteria/CapaPresentacion.csproj
@@ -46,11 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormMantenedorModelo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMantenedorModelo.Designer.cs">
+      <DependentUpon>FormMantenedorModelo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMenuPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormMenuPrincipal.Designer.cs">
       <DependentUpon>FormMenuPrincipal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormTransaccionPedido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTransaccionPedido.Designer.cs">
+      <DependentUpon>FormTransaccionPedido.cs</DependentUpon>
     </Compile>
     <Compile Include="MantenedorMadera.cs">
       <SubType>Form</SubType>
@@ -93,6 +105,9 @@
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormMantenedorModelo.resx">
+      <DependentUpon>FormMantenedorModelo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMantenedorProducto.resx">
       <DependentUpon>FormMantenedorProducto.cs</DependentUpon>
     </EmbeddedResource>
@@ -104,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenuPrincipal.resx">
       <DependentUpon>FormMenuPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTransaccionPedido.resx">
+      <DependentUpon>FormTransaccionPedido.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MantenedorModelo.resx">
       <DependentUpon>MantenedorModelo.cs</DependentUpon>
