--- a/CapaLogica/CapaLogica.csproj
+++ b/CapaLogica/CapaLogica.csproj
@@ -47,6 +47,8 @@
     <Compile Include="LogModelo.cs" />
     <Compile Include="LogMPrima.cs" />
     <Compile Include="LogOP.cs" />
+    <Compile Include="LogTipoMadera.cs" />
+    <Compile Include="LogTipoMueble.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
