--- a/FormularioCarpinteria/CapaPresentacion.csproj
+++ b/FormularioCarpinteria/CapaPresentacion.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormHora.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormHora.Designer.cs">
+      <DependentUpon>FormHora.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTransaccionOP.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +108,9 @@
     </Compile>
     <Compile Include="Principal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormHora.resx">
+      <DependentUpon>FormHora.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormTransaccionOP.resx">
       <DependentUpon>FormTransaccionOP.cs</DependentUpon>
     </EmbeddedResource>
