--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -50,6 +50,7 @@
     <Compile Include="EntOP.cs" />
     <Compile Include="EntTipoMadera.cs" />
     <Compile Include="EntTipoMueble.cs" />
+    <Compile Include="EntUnidadMedida.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
