--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -48,6 +48,7 @@
     <Compile Include="EntModelo.cs" />
     <Compile Include="EntMPrima.cs" />
     <Compile Include="EntOP.cs" />
+    <Compile Include="EntPedido.cs" />
     <Compile Include="EntTipoMadera.cs" />
     <Compile Include="EntTipoMueble.cs" />
     <Compile Include="EntUnidadMedida.cs" />
