--- a/CapaLogica/CapaLogica.csproj
+++ b/CapaLogica/CapaLogica.csproj
@@ -48,6 +48,7 @@
     <Compile Include="LogModelo.cs" />
     <Compile Include="LogMPrima.cs" />
     <Compile Include="LogOP.cs" />
+    <Compile Include="LogPedido.cs" />
     <Compile Include="LogTipoMadera.cs" />
     <Compile Include="LogTipoMueble.cs" />
     <Compile Include="LogUnidadMedida.cs" />
