--- a/FormularioCarpinteria/CapaPresentacion.csproj
+++ b/FormularioCarpinteria/CapaPresentacion.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormAsignarEmpleados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAsignarEmpleados.Designer.cs">
+      <DependentUpon>FormAsignarEmpleados.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormHora.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +120,9 @@
     </Compile>
     <Compile Include="Principal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormAsignarEmpleados.resx">
+      <DependentUpon>FormAsignarEmpleados.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormHora.resx">
       <DependentUpon>FormHora.cs</DependentUpon>
     </EmbeddedResource>
