--- a/FormularioCarpinteria/CapaPresentacion.csproj
+++ b/FormularioCarpinteria/CapaPresentacion.csproj
@@ -70,6 +70,12 @@
     <Compile Include="FormDatosInsumo.Designer.cs">
       <DependentUpon>FormDatosInsumo.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormDatosModelo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDatosModelo.Designer.cs">
+      <DependentUpon>FormDatosModelo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDatosMPrima.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -173,6 +179,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormDatosInsumo.resx">
       <DependentUpon>FormDatosInsumo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDatosModelo.resx">
+      <DependentUpon>FormDatosModelo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormDatosMPrima.resx">
       <DependentUpon>FormDatosMPrima.cs</DependentUpon>
