--- a/FormularioCarpinteria/CapaPresentacion.csproj
+++ b/FormularioCarpinteria/CapaPresentacion.csproj
@@ -106,6 +106,12 @@
     <Compile Include="FormReportes.Designer.cs">
       <DependentUpon>FormReportes.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTransaccionEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTransaccionEmpleado.Designer.cs">
+      <DependentUpon>FormTransaccionEmpleado.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTransaccionOP.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -191,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormReportes.resx">
       <DependentUpon>FormReportes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTransaccionEmpleado.resx">
+      <DependentUpon>FormTransaccionEmpleado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTransaccionOP.resx">
       <DependentUpon>FormTransaccionOP.cs</DependentUpon>
