--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntAsignacionEmpleado.cs" />
     <Compile Include="EntDetPedido.cs" />
     <Compile Include="EntFuncion.cs" />
     <Compile Include="EntInsumos.cs" />
