--- a/CapaAccesoDatos/CapaAccesoDatos.csproj
+++ b/CapaAccesoDatos/CapaAccesoDatos.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion.cs" />
+    <Compile Include="DatAsignacionEmpleado.cs" />
     <Compile Include="DatCliente.cs" />
     <Compile Include="DatEmpleado.cs" />
     <Compile Include="DatFuncion.cs" />
