--- a/FormularioCarpinteria/CapaPresentacion.csproj
+++ b/FormularioCarpinteria/CapaPresentacion.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormAsignarEmpleados.cs" />
+    <Compile Include="FormAsignarEmpleados.Designer.cs">
+      <DependentUpon>FormAsignarEmpleados.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDatosCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,12 +67,6 @@
     </Compile>
     <Compile Include="FormDatosInsumo.Designer.cs">
       <DependentUpon>FormDatosInsumo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormDatosModelo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormDatosModelo.Designer.cs">
-      <DependentUpon>FormDatosModelo.cs</DependentUpon>
     </Compile>
     <Compile Include="FormDatosMPrima.cs">
       <SubType>Form</SubType>
@@ -105,12 +103,6 @@
     </Compile>
     <Compile Include="FormReportes.Designer.cs">
       <DependentUpon>FormReportes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormTransaccionEmpleado.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormTransaccionEmpleado.Designer.cs">
-      <DependentUpon>FormTransaccionEmpleado.cs</DependentUpon>
     </Compile>
     <Compile Include="FormTransaccionOP.cs">
       <SubType>Form</SubType>
@@ -168,6 +160,9 @@
     </Compile>
     <Compile Include="Principal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormAsignarEmpleados.resx">
+      <DependentUpon>FormAsignarEmpleados.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormDatosCliente.resx">
       <DependentUpon>FormDatosCliente.cs</DependentUpon>
     </EmbeddedResource>
@@ -176,9 +171,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormDatosInsumo.resx">
       <DependentUpon>FormDatosInsumo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormDatosModelo.resx">
-      <DependentUpon>FormDatosModelo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormDatosMPrima.resx">
       <DependentUpon>FormDatosMPrima.cs</DependentUpon>
@@ -197,9 +189,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormReportes.resx">
       <DependentUpon>FormReportes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormTransaccionEmpleado.resx">
-      <DependentUpon>FormTransaccionEmpleado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTransaccionOP.resx">
       <DependentUpon>FormTransaccionOP.cs</DependentUpon>
