--- a/FormularioCarpinteria/CapaPresentacion.csproj
+++ b/FormularioCarpinteria/CapaPresentacion.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -64,6 +79,12 @@
     <Compile Include="FormDatosInsumo.Designer.cs">
       <DependentUpon>FormDatosInsumo.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormDatosModelo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDatosModelo.Designer.cs">
+      <DependentUpon>FormDatosModelo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDatosMPrima.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +120,12 @@
     </Compile>
     <Compile Include="FormReportes.Designer.cs">
       <DependentUpon>FormReportes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormTransaccionEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTransaccionEmpleado.Designer.cs">
+      <DependentUpon>FormTransaccionEmpleado.cs</DependentUpon>
     </Compile>
     <Compile Include="FormTransaccionOP.cs">
       <SubType>Form</SubType>
@@ -165,6 +192,9 @@
     <EmbeddedResource Include="FormDatosInsumo.resx">
       <DependentUpon>FormDatosInsumo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormDatosModelo.resx">
+      <DependentUpon>FormDatosModelo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormDatosMPrima.resx">
       <DependentUpon>FormDatosMPrima.cs</DependentUpon>
     </EmbeddedResource>
@@ -182,6 +212,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormReportes.resx">
       <DependentUpon>FormReportes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTransaccionEmpleado.resx">
+      <DependentUpon>FormTransaccionEmpleado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTransaccionOP.resx">
       <DependentUpon>FormTransaccionOP.cs</DependentUpon>
@@ -299,6 +332,18 @@
       <Project>{696786b9-4cab-4f7f-8038-7e1887239625}</Project>
       <Name>CapaLogica</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 y x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
