Cambio en formulario pedido, eliminado anteriores, actualizado en nuevo pedido

--- a/CapaAccesoDatos/CapaAccesoDatos.csproj
+++ b/CapaAccesoDatos/CapaAccesoDatos.csproj
@@ -49,9 +49,9 @@
     <Compile Include="DatInsumos.cs" />
     <Compile Include="DatModelo.cs" />
     <Compile Include="DatMPrima.cs" />
+    <Compile Include="DatNuevoPedido.cs" />
     <Compile Include="DatOP.cs" />
     <Compile Include="DatOrdenEntrada.cs" />
-    <Compile Include="DatPedido.cs" />
     <Compile Include="DatTipoMadera.cs" />
     <Compile Include="DatTipoMueble.cs" />
     <Compile Include="DatUnidadMedida.cs" />
