--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -51,10 +51,10 @@
     <Compile Include="EntMPrima.cs" />
     <Compile Include="EntOP.cs" />
     <Compile Include="EntOrdenEntrada.cs" />
-    <Compile Include="EntPedido.cs" />
     <Compile Include="EntTipoMadera.cs" />
     <Compile Include="EntTipoMueble.cs" />
     <Compile Include="EntUnidadMedida.cs" />
+    <Compile Include="EntNuevoPedido.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
