--- a/CapaLogica/CapaLogica.csproj
+++ b/CapaLogica/CapaLogica.csproj
@@ -48,9 +48,9 @@
     <Compile Include="LogInsumos.cs" />
     <Compile Include="LogModelo.cs" />
     <Compile Include="LogMPrima.cs" />
+    <Compile Include="LogNuevoPedido.cs" />
     <Compile Include="LogOP.cs" />
     <Compile Include="LogOrdenEntrada.cs" />
-    <Compile Include="LogPedido.cs" />
     <Compile Include="LogTipoMadera.cs" />
     <Compile Include="LogTipoMueble.cs" />
     <Compile Include="LogUnidadMedida.cs" />
